--- a/pursuit/Views/ResourcesJobSeeker.storyboard
+++ b/pursuit/Views/ResourcesJobSeeker.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="AP1-zn-I1U">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="AP1-zn-I1U">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -11,7 +11,7 @@
         <!--Navigation Controller-->
         <scene sceneID="hLw-pf-2Ol">
             <objects>
-                <navigationController id="AP1-zn-I1U" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="ResourcesJobS" id="AP1-zn-I1U" sceneMemberID="viewController">
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="ouy-Tg-i5d">
                         <rect key="frame" x="0.0" y="59" width="393" height="44"/>
@@ -28,7 +28,7 @@
         <!--Resources-->
         <scene sceneID="PX9-Uy-UiC">
             <objects>
-                <viewController storyboardIdentifier="ResourcesJobS" id="1ZJ-nd-6GL" sceneMemberID="viewController">
+                <viewController id="1ZJ-nd-6GL" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="iOE-5T-PMQ">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
