--- a/pursuit/Views/JobSeeker Views/JobsJobSeeker.storyboard
+++ b/pursuit/Views/JobSeeker Views/JobsJobSeeker.storyboard
@@ -38,10 +38,10 @@
                                 <rect key="frame" x="0.0" y="103" width="393" height="666"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BT2-Aw-bJt">
-                                        <rect key="frame" x="0.0" y="0.0" width="393" height="710"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="393" height="686"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="ObA-kS-un8">
-                                                <rect key="frame" x="8" y="0.0" width="377" height="710"/>
+                                                <rect key="frame" x="8" y="0.0" width="377" height="686"/>
                                                 <subviews>
                                                     <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="Bh9-Av-nTK">
                                                         <rect key="frame" x="0.0" y="0.0" width="377" height="50"/>
@@ -62,6 +62,9 @@
                                                                 <rect key="frame" x="0.0" y="0.0" width="183.66666666666666" height="40"/>
                                                                 <state key="normal" title="Button"/>
                                                                 <buttonConfiguration key="configuration" style="gray" title="Filter"/>
+                                                                <connections>
+                                                                    <segue destination="YDL-xu-Rqr" kind="show" id="TyX-9x-4cq"/>
+                                                                </connections>
                                                             </button>
                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m0Z-il-7sV">
                                                                 <rect key="frame" x="193.66666666666663" y="0.0" width="183.33333333333337" height="40"/>
@@ -162,7 +165,7 @@
                                                         </variation>
                                                     </label>
                                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="gI9-PJ-AjH">
-                                                        <rect key="frame" x="0.0" y="337" width="377" height="373"/>
+                                                        <rect key="frame" x="0.0" y="337" width="377" height="349"/>
                                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="373" id="BGA-Vd-DhT">
@@ -188,7 +191,7 @@
                                                                                     </constraints>
                                                                                     <userDefinedRuntimeAttributes>
                                                                                         <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                                                                            <integer key="value" value="20"/>
+                                                                                            <integer key="value" value="32"/>
                                                                                         </userDefinedRuntimeAttribute>
                                                                                     </userDefinedRuntimeAttributes>
                                                                                 </imageView>
@@ -302,10 +305,10 @@
                                         </constraints>
                                     </view>
                                     <stackView hidden="YES" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="yXQ-pw-OeK">
-                                        <rect key="frame" x="10" y="100" width="373" height="355"/>
+                                        <rect key="frame" x="10" y="100" width="373" height="331"/>
                                         <subviews>
                                             <button opaque="NO" alpha="0.94999998807907104" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gg0-Of-rTs">
-                                                <rect key="frame" x="0.0" y="0.0" width="373" height="88.333333333333329"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="373" height="82.333333333333329"/>
                                                 <color key="backgroundColor" systemColor="systemGroupedBackgroundColor"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" title="Date (Latest)"/>
@@ -314,7 +317,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" alpha="0.94999998807907104" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KTr-Dv-hKv">
-                                                <rect key="frame" x="0.0" y="89" width="373" height="88.333333333333314"/>
+                                                <rect key="frame" x="0.0" y="83" width="373" height="82.333333333333314"/>
                                                 <color key="backgroundColor" systemColor="systemGroupedBackgroundColor"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" title="Date (Oldest)"/>
@@ -323,7 +326,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" alpha="0.94999998807907104" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fHc-GR-ilW">
-                                                <rect key="frame" x="0.0" y="178" width="373" height="88"/>
+                                                <rect key="frame" x="0.0" y="166" width="373" height="82"/>
                                                 <color key="backgroundColor" systemColor="systemGroupedBackgroundColor"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" title="Name (A-Z)"/>
@@ -332,7 +335,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" alpha="0.94999998807907104" tag="3" contentMode="scaleToFill" verticalCompressionResistancePriority="749" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NIj-dx-Sob">
-                                                <rect key="frame" x="0.0" y="266.66666666666669" width="373" height="88.333333333333314"/>
+                                                <rect key="frame" x="0.0" y="248.66666666666671" width="373" height="82.333333333333343"/>
                                                 <color key="backgroundColor" systemColor="systemGroupedBackgroundColor"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" title="Name (Z-A)"/>
@@ -404,10 +407,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="Mt0-7g-RfM">
-                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
+                                <rect key="frame" x="0.0" y="103" width="393" height="666"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GHl-ur-jj9">
-                                        <rect key="frame" x="0.0" y="0.0" width="393" height="145"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="393" height="127.33333333333333"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Type" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r1p-LB-A34">
                                                 <rect key="frame" x="29" y="8" width="40.333333333333329" height="20.333333333333332"/>
@@ -447,7 +450,7 @@
                                         </subviews>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zAl-Kw-8RQ">
-                                        <rect key="frame" x="0.0" y="145" width="393" height="144.33333333333337"/>
+                                        <rect key="frame" x="0.0" y="127.33333333333334" width="393" height="126.66666666666666"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K8R-W2-W7O">
                                                 <rect key="frame" x="18" y="36" width="115" height="34"/>
@@ -494,7 +497,7 @@
                                         </subviews>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gip-NS-cGC">
-                                        <rect key="frame" x="0.0" y="289.33333333333331" width="393" height="145.66666666666669"/>
+                                        <rect key="frame" x="0.0" y="253.99999999999997" width="393" height="127.66666666666666"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Governorate" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mlp-KC-sio">
                                                 <rect key="frame" x="29" y="8" width="102" height="20.333333333333332"/>
@@ -534,7 +537,7 @@
                                         </subviews>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bxw-oI-HCo">
-                                        <rect key="frame" x="0.0" y="435" width="393" height="144.66666666666663"/>
+                                        <rect key="frame" x="0.0" y="381.66666666666669" width="393" height="127"/>
                                         <subviews>
                                             <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="20" translatesAutoresizingMaskIntoConstraints="NO" id="yRL-uY-EZj">
                                                 <rect key="frame" x="53.333333333333343" y="49.666666666666686" width="286.33333333333326" height="31"/>
@@ -564,7 +567,7 @@
                                         </subviews>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vy2-Z9-PVU">
-                                        <rect key="frame" x="0.0" y="579.66666666666663" width="393" height="57"/>
+                                        <rect key="frame" x="0.0" y="508.66666666666663" width="393" height="50"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Company" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t7T-Eq-1VX">
                                                 <rect key="frame" x="29" y="15" width="77.666666666666657" height="20.333333333333332"/>
@@ -576,7 +579,7 @@
                                         </subviews>
                                     </view>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="xRv-Uu-IWL">
-                                        <rect key="frame" x="0.0" y="636.66666666666663" width="393" height="122.33333333333337"/>
+                                        <rect key="frame" x="0.0" y="558.66666666666663" width="393" height="107.33333333333337"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="13" id="0F8-g8-X8B">
                                             <size key="itemSize" width="100" height="40"/>
@@ -654,17 +657,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gg1-R7-dmt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1569" y="-284"/>
-        </scene>
-        <!--JobDetailsJobS-->
-        <scene sceneID="g2R-ve-2j5">
-            <objects>
-                <viewControllerPlaceholder storyboardName="JobDetails" referencedIdentifier="JobDetailsJobS" id="ktI-2L-sXR" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" id="yvK-Tp-C3G"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="3iq-EW-g8N" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1434" y="-66"/>
+            <point key="canvasLocation" x="457" y="-539"/>
         </scene>
         <!--Apply-->
         <scene sceneID="yPe-ZA-1Yy">
